--- a/InternConnect/appsettings.json
+++ b/InternConnect/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",  
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connection": "server=localhost;port=3306;database=internconnect;user=root;password=12042004;"
+    "connection": "server=localhost;port=3306;database=internconnect;user=root;password=SQL es durisimo01.;"
   }
 }
