modificacion de empresas, estudiantes y asignacion de rol

--- a/InternConnect/appsettings.json
+++ b/InternConnect/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connection": "server=localhost;port=3306;database=internconnect;user=root;password=SQL es durisimo01.;"
+    "connection": "server=localhost;port=3306;database=internconnect;user=root;password=12042004;"
   }
 }
